docs/.vitepress/theme/style.css
:root {
  --vp-c-brand-0: #e5006a;
  --vp-c-brand-1: #e5006a;
  --vp-c-brand-2: #e5006a;
  --vp-button-brand-border: var(--vp-c-brand-0);
  --vp-button-brand-bg: var(--vp-c-brand-0);
  --vp-button-brand-hover-border: var(--vp-c-brand-1);
  --vp-button-brand-hover-bg: var(--vp-c-brand-1);
  --vp-button-brand-active-border: var(--vp-c-brand-2);
  --vp-button-brand-active-bg: var(--vp-c-brand-2);
}

/* .DocSearch-Sidepanel-Prompt--submit:not([aria-disabled="true"]):hover {
  color: var(--vp-c-brand) !important;
} */

.vp-doc .footnote-ref a {
  color: var(--vp-c-brand) !important;
}

.vp-doc a {
  text-decoration: none !important;
}

a:hover {
  opacity: 1 !important;
}

.DocSearch-Action[title="Conversation history"],
.DocSearch-Action[title="Start a new conversation"],
.DocSearch-Action.DocSearch-StopStreaming,
.DocSearch-AskAiScreen-Answer-Footer,
.DocSearch-AskAiScreen-MessageContent-Tool.Tool--Result,
.DocSearch-AskAiScreen-RelatedSources,
.DocSearch-Button-Keys,
.DocSearch-Divider,
.DocSearch-Help,
.DocSearch-Menu-trigger.DocSearch-Action,
.DocSearch-NoResults-Prefill-List-Items p,
.DocSearch-Sidepanel-Screen--introduction,
.DocSearch-StreamingIndicator,
.DocSearch-CodeSnippet-CopyButton,
.vp-doc .header-anchor:before {
  display: none !important;
}

.dark .DocSearch-Hit-source,
.DocSearch-Action.DocSearch-AskAi-Return,
.DocSearch-Action.DocSearch-Close,
.DocSearch-Action.DocSearch-Sidepanel-Action-close,
.DocSearch-Action.DocSearch-Sidepanel-Action-expand,
.DocSearch-Sidepanel-Prompt--submit,
.VPNavBarAskAiButton {
  background-color: transparent !important;
}

.DocSearch-Button,
.link,
.VPFeature,
.VPSwitch {
  border-color: transparent !important;
}

.pager-link,
.search-bar:focus-within {
  border-color: var(--vp-c-divider) !important;
}

.DocSearch-AskAiScreen-Disclaimer,
.DocSearch-Clear,
.DocSearch-Input,
.DocSearch-Modal-heading.shimmer,
.DocSearch-Title {
  font-weight: 400 !important;
}

.DocSearch-Button-Placeholder {
  font-weight: 500 !important;
}

.DocSearch-AskAiScreen-Disclaimer,
.footnotes {
  font-size: 14px !important;
}

.DocSearch-AskAiScreen-Query {
  line-height: 28px !important;
}

.DocSearch-AskAiScreen-Disclaimer {
  margin: -5px 0 0 0 !important;
}

.DocSearch-Hit-source,
.DocSearch-AskAiScreen-Disclaimer {
  padding-inline-start: var(--docsearch-spacing) !important;
}

.DocSearch-Input,
.DocSearch-Modal-heading.shimmer {
  padding-block: 0 !important;
  margin-block: 0 !important;
  line-height: 31px !important; 
  height: 31px !important; 
}

.DocSearch-Modal-heading.shimmer {
  display: flex !important;
  align-items: center !important;
}

.DocSearch-Search-Icon {
  --icon: url(data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%27%20viewBox%3D%270%200%2024%2024%27%3E%3Cg%20fill%3D%27none%27%20stroke%3D%27black%27%20stroke%2Dlinecap%3D%27round%27%20stroke%2Dlinejoin%3D%27round%27%20stroke%2Dwidth%3D%272%27%3E%3Cpath%20d%3D%27m21%2021l%2D4%2E34%2D4%2E34%27%2F%3E%3Ccircle%20cx%3D%2711%27%20cy%3D%2711%27%20r%3D%278%27%20stroke%2Dwidth%3D%272%27%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E) !important;
}

.DocSearch-Search-Icon circle,
.DocSearch-Search-Icon path {
  stroke-width: 2 !important;
}

.VPContent > .VPDoc {
  padding-top: 48px !important;
}

.VPHomeHero .image-src {
  height: unset !important;
}

.dark .DocSearch-Dropdown,
.dark .DocSearch-Form,
.dark .DocSearch-Sidepanel-Content,
.dark .profile,
.dark .VPHome .VPFeature {
  background-color: rgba(37, 37, 41, 0.5) !important;
}

.DocSearch-Hit a,
.DocSearch-AskAiScreen-Response {
  border-radius: 8px !important;
}

.VPDocFooter a.pager-link,
.VPLocalNavOutlineDropdown > div.items,
.custom-block {
  border-radius: 12px !important;
}

@media (width > 768px) {
  .DocSearch-Modal {
    border-radius: 12px !important;
    overflow: hidden !important;
  }
}

